# goit-algo2-hw-04

./: README.md  pyproject.toml
src/: task_1.py  task_2.py
